[gd_scene load_steps=6 format=3 uid="uid://dsoibnltwojmr"]

[ext_resource type="Texture2D" uid="uid://i4u8ppyhu23v" path="res://icon.png" id="1_2vm76"]
[ext_resource type="Script" path="res://Scripts/ally.gd" id="1_w8a60"]
[ext_resource type="Theme" uid="uid://depumydraltld" path="res://fonts/gametheme.tres" id="3_snanb"]
[ext_resource type="Theme" uid="uid://dpptq3phqnlc0" path="res://fonts/combatenttheme.tres" id="4_bqq6p"]

[sub_resource type="Animation" id="Animation_rt4j1"]
resource_name = "hovered"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteHolder:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.25, 3.75, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.261799, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteHolder:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.75, 0.75), Vector2(1, 1)]
}

[node name="ally" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 6
mouse_filter = 1
script = ExtResource( "1_w8a60" )

[node name="SpriteHolder" type="Control" parent="."]
rect_min_size = Vector2(1, 1)
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="SpriteHolder"]
offset_left = -20.0
offset_top = -28.0
offset_right = 20.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( "1_2vm76" )
ignore_texture_size = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hovered = SubResource( "Animation_rt4j1" )

[node name="HoverZone" type="Control" parent="."]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hp" type="Label" parent="."]
offset_left = -92.0
offset_top = -16.0
offset_right = 36.0
offset_bottom = 9.0
theme = ExtResource( "3_snanb" )
text = "HP:"

[node name="statuslist" type="ItemList" parent="."]
rect_min_size = Vector2(32, 16)
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
mouse_filter = 1
theme = ExtResource( "4_bqq6p" )
theme_override_colors/guide_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/font_selected_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(0, 0, 0, 0)
text_overrun_behavior = 1
max_columns = 0
fixed_column_width = 24
fixed_icon_size = Vector2(24, 24)

[connection signal="mouse_entered" from="." to="." method="hover_over"]
[connection signal="mouse_exited" from="." to="." method="stop_hover"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="animation_over"]
